--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,45 @@
 body {
   background: #1E1E1E;
 }
+@keyframes blink-even {
+  50% {
+    background: #FF1D1D;
+  }
+}
+@keyframes blink-odd {
+  50% {
+    background: #17CB17;
+  }
+}
 header {
   color: #C0BFDB;
   text-align: center;
   line-height: 20px;
+}
+header .box-toy {
+  background: blue;
+  margin: 0;
+  padding: 10px;
+  text-align: left;
+  min-width: 1330px;
+}
+header .box-toy .toy {
+  display: inline-block;
+  background: #76c8be;
+  width: 40px;
+  height: 40px;
+  margin-left: 80px;
+  color: red;
+  text-align: center;
+  border-radius: 100%;
+}
+header .box-toy .toy:nth-child(even) {
+  background: #17CB17;
+  animation: blink-even 2s infinite steps(1, end);
+}
+header .box-toy .toy:nth-child(odd) {
+  background: #FF1D1D;
+  animation: blink-odd 2s infinite steps(1, end);
 }
 .tests {
   background: blue;
@@ -20,10 +55,41 @@ main {
 main .work-block {
   display: inline-block;
   margin-left: 200px;
-  width: 800px;
+  width: 801px;
   height: 500px;
   background: #817F7F;
   border: 7px ridge black;
+  position: relative;
+  overflow: hidden;
+}
+main .work-block .column-group {
+  background: #6CC3D7;
+  padding-left: 1px;
+}
+main .work-block .column-group .column {
+  display: inline-block;
+  float: left;
+  width: 264px;
+  height: 100px;
+  border: 1px solid black;
+  background: #8EC7C3;
+  margin-top: 10px;
+  overflow: hidden;
+}
+main .work-block .column-group .column ul {
+  position: relative;
+  left: 100px;
+  top: 0;
+}
+main .work-block .column-group .column ul li {
+  font-size: 50px;
+  line-height: 100px;
+  list-style-type: none;
+  position: absolute;
+}
+main .work-block .cost {
+  margin-top: 400px;
+  font-size: 30px;
 }
 main .work-block .identification {
   background: #000;
@@ -55,6 +121,38 @@ main .work-block .identification input[type="submit"] {
 }
 main .work-block .identification ::-webkit-input-placeholder {
   padding-left: 50px;
+}
+main .work-block .info-game {
+  width: 800px;
+  height: 40px;
+  text-align: left;
+  background: #F2EAEA;
+  display: none;
+}
+main .work-block .game-block {
+  text-align: left;
+}
+main .work-block .game-block .box {
+  background: #5BBC7C;
+  display: inline-block;
+  width: 160px;
+  height: 125px;
+  float: left;
+  text-align: center;
+  line-height: 125px;
+  cursor: pointer;
+}
+main .work-block .game-block .box2,
+main .work-block .game-block .box4,
+main .work-block .game-block .box6,
+main .work-block .game-block .box8,
+main .work-block .game-block .box10,
+main .work-block .game-block .box12,
+main .work-block .game-block .box14,
+main .work-block .game-block .box16,
+main .work-block .game-block .box18,
+main .work-block .game-block .box20 {
+  background: #9594D3;
 }
 main .control-menu {
   display: inline-block;
@@ -95,6 +193,40 @@ main .control-menu .new-game p {
   padding: 15px 10px;
 }
 main .control-menu .new-game p:hover {
+  color: green;
+}
+main .control-menu .start-game {
+  margin-top: 10px;
+  background: #000;
+  border: 1px solid red;
+  box-shadow: 0 1px 20px red;
+  cursor: pointer;
+  height: 50px;
+}
+main .control-menu .start-game p {
+  font-size: 20px;
+  margin-top: 0px;
+  color: white;
+  padding: 15px 10px;
+}
+main .control-menu .start-game p:hover {
+  color: green;
+}
+main .control-menu .stop-auto {
+  margin-top: 10px;
+  background: #000;
+  border: 1px solid red;
+  box-shadow: 0 1px 20px red;
+  cursor: pointer;
+  height: 50px;
+}
+main .control-menu .stop-auto p {
+  font-size: 20px;
+  margin-top: 0px;
+  color: white;
+  padding: 15px 10px;
+}
+main .control-menu .stop-auto p:hover {
   color: green;
 }
 main .control-menu .sign-up {
